# REM2.0

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/rem-application/: Cargo.toml
crates/rem-application/src/: lib.rs
crates/rem-application/src/dto/: mod.rs
crates/rem-application/src/errors/: mod.rs
crates/rem-application/src/use_cases/: extract_function.rs  mod.rs  verify_equivalence.rs
crates/rem-cli/: Cargo.toml
crates/rem-cli/src/: cli.rs  handlers.rs  main.rs
crates/rem-cli/tests/: integration.rs
crates/rem-domain/: Cargo.toml
crates/rem-domain/src/: lib.rs
crates/rem-domain/src/entities/: mod.rs
crates/rem-domain/src/errors/: mod.rs
crates/rem-domain/src/events/: mod.rs
crates/rem-domain/src/ports/: analysis.rs  event_publisher.rs  filesystem.rs  mod.rs  repair.rs  syntax_rewrite.rs  verification.rs
crates/rem-domain/src/services/: code_generator.rs  control_flow_analyzer.rs  lifetime_repairer.rs  mod.rs  ownership_oracle.rs
crates/rem-domain/src/value_objects/: mod.rs
crates/rem-infrastructure/: Cargo.toml
crates/rem-infrastructure/src/: lib.rs
crates/rem-infrastructure/src/adapters/: cargo.rs  charon_aeneas.rs  event_publisher.rs  filesystem.rs  mod.rs  rust_analyzer.rs  syntax_rewrite.rs
tests/fixtures/basic/: Cargo.toml
tests/fixtures/basic/src/: main.rs
tests/fixtures/horror_refactor/: Cargo.toml
tests/fixtures/horror_refactor/src/: level_01_mut_ownership.rs  level_02_control_flow.rs  level_03_lifetimes.rs
