[package]
name        = "rem-cli"
description = "Command-line interface for REM3 extract-function refactoring"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "rem"
path = "src/main.rs"

[dependencies]
rem-domain         = { workspace = true }
rem-application    = { workspace = true }
rem-infrastructure = { workspace = true }

clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.12"
tempfile   = "3.8.0"
fs_extra   = "1.3.0"
