[package]
name        = "rem-infrastructure"
description = "Adapters: rust-analyzer, cargo, filesystem, CHARON/AENEAS, tracing publisher"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
rem-domain  = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }

# rust-analyzer public API crates
ra_ap_syntax        = { workspace = true }
ra_ap_ide           = { workspace = true }
ra_ap_ide_db        = { workspace = true }
ra_ap_project_model = { workspace = true }
ra_ap_vfs           = { workspace = true }
ra_ap_load_cargo    = { workspace = true }
ra_ap_hir           = "0.0.328"
ra_ap_span          = "0.0.328"
